[package]
name = "zkinterface"
version = "1.1.3"
authors = ["Aurélien Nicolas <aurel@qed-it.com>"]
license = "MIT"
build = "build.rs"
edition = '2018'
description = "An implementation of zkInterface"
homepage = "https://github.com/QED-it/zkinterface"
repository = "https://github.com/QED-it/zkinterface/tree/master/rust"
documentation = "https://github.com/QED-it/zkinterface/blob/master/zkInterface.pdf"
keywords = ["zero-knowledge", "zkproof", "cryptography"]

[features]
# Whether to regenerate code from zkinterface.fbs. Requires the Flatbuffers compiler.
fbs = []

[dependencies]
flatbuffers = "0.5.0"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"

[build-dependencies]
regex = "1"
