[package]
name = "zkinterface"
version = "1.3.4"
authors = ["Aurélien Nicolas <aurel@qed-it.com>"]
license = "MIT"
build = "build.rs"
edition = '2018'
description = "An implementation of zkInterface"
homepage = "https://github.com/QED-it/zkinterface"
repository = "https://github.com/QED-it/zkinterface/tree/master/rust"
documentation = "https://github.com/QED-it/zkinterface/blob/master/zkInterface.pdf"
keywords = ["zero-knowledge", "zkproof", "cryptography"]

[features]
# Whether to regenerate code from zkinterface.fbs. Requires the Flatbuffers compiler.
fbs = []

[dependencies]
flatbuffers = "0.8.1"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
serde_yaml = "0.8.13"
structopt = "0.3.17"
rand = "0.7.3"
num-bigint = { version = "0.3.0", features = ["rand"] }
num-traits = "0.2.12"
num-integer = "0.1.43"
colored = "2.0.0"

[build-dependencies]
regex = "1"
