[package]
name = "zkinterface-libsnark"
version = "1.1.3"
description = "Wrapper for libsnark / gadgetlib through zkInterface"
homepage = "https://github.com/QED-it/zkinterface"
repository = "https://github.com/QED-it/zkinterface/tree/master/cpp/libsnark-rust"
authors = ["aurel <aurel@qed-it.com>"]
license = "MIT"
edition = "2018"
build = "build.rs"
links = "zkif_gadgetlib"

[dependencies]
zkinterface = "1.1.3"
#zkinterface = { path = "../../rust" }

[build-dependencies]
cmake = "0.1.44"